Working nav bar 1.0

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>BREAD.</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -14,7 +14,35 @@
     <script src="./bootstrap/js/bootstrap.js"></script>
   </head>
   <body>
-    
+    <header>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div id="nav-container" class="container-fluid"
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="index.html#"><h1 class="navbar-brand">BREAD.</h1></a>
 
+            <span><p class="navbar-text navbar-brand hidden-xs">News.Videos.Reviews.</p></span>
+
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="">Latest</a></li>
+              <li><a href="">New Music</a></li>
+              <li><a href="">Videos</a></li>
+              <li><a href="">Reviews</a></li>
+
+          </ul>
+        </div><!-- /.navbar-collapse -->
+    </div>
+    </nav>
+  </header>
   </body>
 </html>
