--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>BREAD.</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -14,7 +14,115 @@
     <script src="./bootstrap/js/bootstrap.js"></script>
   </head>
   <body>
-    
+    <header>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div id="nav-container" class="container-fluid"
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="index.html#"><h1 class="navbar-brand">BREAD.</h1></a>
+
+            <span><p class="navbar-text navbar-brand hidden-xs">News.Videos.Reviews.</p></span>
+
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="">Latest</a></li>
+              <li><a href="">New Music</a></li>
+              <li><a href="">Videos</a></li>
+              <li><a href="">Reviews</a></li>
+
+          </ul>
+        </div><!-- /.navbar-collapse -->
+    </div>
+    </nav>
+  </header>
+
+  <!----------------------------------------------------------->
+  <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+
+
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+
+              <div class="item active">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">Lorem ipsum dolor sit amet consetetur sadipscing</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+               <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">consetetur sadipscing elitr, sed diam nonumy eirmod</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+              <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">tempor invidunt ut labore et dolore</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+              <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">magna aliquyam erat, sed diam voluptua</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+              <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">tempor invidunt ut labore et dolore magna aliquyam erat</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+            </div><!-- End Carousel Inner -->
+
+
+          <ul class="list-group col-sm-4">
+            <li data-target="#myCarousel" data-slide-to="0" class="list-group-item active"><h4>Lorem ipsum dolor sit amet consetetur sadipscing</h4></li>
+            <li data-target="#myCarousel" data-slide-to="1" class="list-group-item"><h4>consetetur sadipscing elitr, sed diam nonumy eirmod</h4></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="list-group-item"><h4>tempor invidunt ut labore et dolore</h4></li>
+            <li data-target="#myCarousel" data-slide-to="3" class="list-group-item"><h4>magna aliquyam erat, sed diam voluptua</h4></li>
+            <li data-target="#myCarousel" data-slide-to="4" class="list-group-item"><h4>tempor invidunt ut labore et dolore magna aliquyam erat</h4></li>
+          </ul>
+
+            <!-- Controls --> 
+            <div class="carousel-controls">
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
+
+          </div><!-- End Carousel -->
+
+    </div>
+
+  </div>
+</div>
 
   </body>
 </html>
