added a line breaker on page

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <li data-target="#myCarousel" data-slide-to="4" class="list-group-item"><h4>tempor invidunt ut labore et dolore magna aliquyam erat</h4></li>
           </ul>
 
-            <!-- Controls --> 
+            <!-- Controls -->
             <div class="carousel-controls">
                 <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left"></span>
@@ -122,7 +122,19 @@
     </div>
 
   </div>
-</div>
+        <div class="row">
+          <div class="col-md-12">
+
+            <hr class="style1 breaker">
+
+          </div>
+
+      </div>
+
+      </div>
+
+
+
 
   </body>
 </html>
