--- a/index.html
+++ b/index.html
@@ -45,8 +45,102 @@
     </nav>
   </header>
 
-  
-    </nav>
-  </header>
+  <!----------------------------------------------------------->
+  <div class="container">
+  <div class="row">
+    <div class="col-md-12">
+
+
+          <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+
+              <div class="item active">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">Lorem ipsum dolor sit amet consetetur sadipscing</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+               <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">consetetur sadipscing elitr, sed diam nonumy eirmod</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+              <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">tempor invidunt ut labore et dolore</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+              <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">magna aliquyam erat, sed diam voluptua</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+              <div class="item">
+                <img src="https://www.fillmurray.com/760/400">
+                 <div class="carousel-caption">
+                  <h4><a href="#">tempor invidunt ut labore et dolore magna aliquyam erat</a></h4>
+                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
+                </div>
+              </div><!-- End Item -->
+
+            </div><!-- End Carousel Inner -->
+
+
+          <ul class="list-group col-sm-4">
+            <li data-target="#myCarousel" data-slide-to="0" class="list-group-item active"><h4>Lorem ipsum dolor sit amet consetetur sadipscing</h4></li>
+            <li data-target="#myCarousel" data-slide-to="1" class="list-group-item"><h4>consetetur sadipscing elitr, sed diam nonumy eirmod</h4></li>
+            <li data-target="#myCarousel" data-slide-to="2" class="list-group-item"><h4>tempor invidunt ut labore et dolore</h4></li>
+            <li data-target="#myCarousel" data-slide-to="3" class="list-group-item"><h4>magna aliquyam erat, sed diam voluptua</h4></li>
+            <li data-target="#myCarousel" data-slide-to="4" class="list-group-item"><h4>tempor invidunt ut labore et dolore magna aliquyam erat</h4></li>
+          </ul>
+
+            <!-- Controls -->
+            <div class="carousel-controls">
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
+
+          </div><!-- End Carousel -->
+
+    </div>
+
+  </div>
+        <div class="row">
+          <div class="col-md-12">
+
+            <hr class="style1 breaker">
+
+          </div>
+
+      </div>
+
+      </div>
+
+       <div class="row">
+         <div class="col-md-3">
+
+
+         </div>
+
+       </div>
+
+
   </body>
 </html>
