--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
     <title>BREAD.</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
@@ -136,64 +136,95 @@
 
 
  <div class="news">
-       <div class="row">
-         <div class="col-sm-4 thumbnail">
+       <div class="row align-items-center">
+         <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
            <h1>Article</h1>
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+           <img src="https://www.fillmurray.com/200/200" class="img-responsive float-left"alt="">
+           <h2>Tupac returns..</h2>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
          </div>
 
 
 
-         <div class="col-sm-4 thumbnail">
+         <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
            <h1>Article</h1>
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+           <h2>Tupac returns..</h2>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
 
          </div>
 
-         <div class="col-sm-4 thumbnail">
+         <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
            <h1>Article</h1>
-           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+           <h2>Tupac returns..</h2>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
+         </div>
+
+         <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+           <h1>Article</h1>
+           <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+           <h2>Tupac returns..</h2>
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
          </div>
 
 
          </div>
 
-         <div class="row">
-           <div class="col-md-4 thumbnail">
+         <div class="row align-items-center">
+           <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
              <h1>Article</h1>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+             <h2>Tupac returns..</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
            </div>
 
 
 
-           <div class="col-md-4 thumbnail">
+           <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
              <h1>Article</h1>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+            <h2>Tupac returns..</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
            </div>
 
-           <div class="col-md-4 thumbnail">
+           <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
              <h1>Article</h1>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+             <h2>Tupac returns..</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
+           </div>
+           <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+             <h1>Article</h1>
+             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+             <h2>Tupac returns..</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
            </div>
 
 
            </div>
+
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+
+    <hr class="style1 breaker">
+
+  </div>
 
 </div>
 
