--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="index.html#"><h1 class="navbar-brand">BREAD.</h1></a>
+          <a href="index.html#"><h1 class="navbar-brand">B.READ</h1></a>
 
             <span><p class="navbar-text navbar-brand hidden-xs">News.Videos.Reviews.</p></span>
 
@@ -137,6 +137,7 @@
 
  <div class="news">
        <div class="row align-items-center">
+         <h1>News</h1>
          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
            <h1>Article</h1>
            <img src="https://www.fillmurray.com/200/200" class="img-responsive float-left"alt="">
@@ -223,6 +224,37 @@
   <div class="col-md-12">
 
     <hr class="style1 breaker">
+
+  </div>
+
+</div>
+
+<div class="row">
+  <h1>Videos</h1>
+  <div class="col-xs-12 col-sm-6 col-md-6 thumbnail">
+
+    <img src="https://www.fillmurray.com/740/400" alt="">
+    <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
+
+    </video>
+
+  </div>
+
+  <div class="col-xs-12 col-sm-6 col-md-6 thumbnail">
+
+    <img src="https://www.fillmurray.com/740/400" alt="">
+    <p>Sigrid proves shes worthy for success with latest performance on Graham Norton</p>
+
+    </video>
+
+  </div>
+
+</div>
+
+<div class="row more-button">
+  <div class="col-md-12">
+
+  <button type="button" class="btn btn-primary btn-block center-block">More from bread...</button>
 
   </div>
 
