--- a/index.html
+++ b/index.html
@@ -262,5 +262,37 @@
 
 </div>
 
+<footer class=" bottom panel panel-default panel-body align-items-center">
+  <div class="row"> <!--Row 4 : Is the Footer, which holds the contact info of me and sparta, split in two parts -->
+
+       <div class="col-sm-12" "col-md-12" "col-lg-12">
+            <h1>B.READ</h1>
+          <ul class="list-inline">
+            <li> <img src="./images/iconmonstr-facebook-3.svg" alt=""> </li>
+            <li> <img src="./images/iconmonstr-instagram-11.svg" alt=""> </li>
+            <li> <img src="./images/iconmonstr-twitter-3.svg" alt=""> </li>
+            <li> <img src="./images/iconmonstr-youtube-1.svg" alt=""> </li>
+          </ul>
+
+          <ul class="list-inline">
+            <li>About</li>
+            <li> Contact us</li>
+            <li>Privacy Policy</li>
+            <li>Careers</li>
+          </ul>
+
+
+              <p>&copy B.READ 2018</p>
+
+
+
+
+
+       </div>
+
+  </div>
+
+</footer>
+
   </body>
 </html>
