--- a/pages/index-2.html
+++ b/pages/index-2.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>BREAD.</title>
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
+  <title>BREAD.</title>
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 
-    <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
-      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-      crossorigin="anonymous"></script>
+  <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 
-    <script src="./bootstrap/js/bootstrap.js"></script>
-    <title></title>
-  </head>
+  <script src="../bootstrap/js/bootstrap.js"></script>
+</head>
   <body>
     <header>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -128,9 +127,105 @@
             </div>
 
 
+
+
+            </div>
+
+
+
+
+
+
+ </div>
+
+ <div class="container  more-button">
+<button type="button" class="btn btn-primary btn-block center-block btn-info" data-toggle="collapse" data-target="#more">Older news...</button>
+<div id="more" class="collapse">
+  <div class="news">
+        <div class="row align-items-center">
+          <h1>News</h1>
+          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+            <h1>Article</h1>
+            <img src="https://www.fillmurray.com/200/200" class="img-responsive float-left"alt="">
+            <h2>Tupac returns..</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+          </div>
+
+
+
+          <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+            <h1>Article</h1>
+            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+            <h2>Tupac returns..</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+
+          </div>
+
+          <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+            <h1>Article</h1>
+            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+            <h2>Tupac returns..</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+          </div>
+
+          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+            <h1>Article</h1>
+            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+            <h2>Tupac returns..</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+          </div>
+
+
+          </div>
+
+          <div class="row align-items-center">
+            <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+              <h1>Article</h1>
+              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+              <h2>Tupac returns..</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+            </div>
+
+
+
+            <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+              <h1>Article</h1>
+             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+             <h2>Tupac returns..</h2>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+            </div>
+
+            <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+              <h1>Article</h1>
+              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+              <h2>Tupac returns..</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+              <h1>Article</h1>
+              <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
+              <h2>Tupac returns..</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+            </div>
+
             </div>
 
  </div>
+</div>
+</div>
 </div>
 
 <footer class=" bottom panel panel-default panel-body align-items-center">
@@ -139,10 +234,10 @@
        <div class="col-sm-12" "col-md-12" "col-lg-12">
             <h1>B.READ</h1>
           <ul class="list-inline">
-            <li> <img src="./images/iconmonstr-facebook-3.svg" alt=""> </li>
-            <li> <img src="./images/iconmonstr-instagram-11.svg" alt=""> </li>
-            <li> <img src="./images/iconmonstr-twitter-3.svg" alt=""> </li>
-            <li> <img src="./images/iconmonstr-youtube-1.svg" alt=""> </li>
+            <li> <img src="../images/iconmonstr-facebook-3.svg" alt=""> </li>
+            <li> <img src="../images/iconmonstr-instagram-11.svg" alt=""> </li>
+            <li> <img src="../images/iconmonstr-twitter-3.svg" alt=""> </li>
+            <li> <img src="../images/iconmonstr-youtube-1.svg" alt=""> </li>
           </ul>
 
           <ul class="list-inline">
@@ -154,10 +249,6 @@
 
 
               <p>&copy B.READ 2018</p>
-
-
-
-
 
        </div>
 
