added back to top button

--- a/pages/index-2.html
+++ b/pages/index-2.html
@@ -15,7 +15,7 @@
   <script src="../bootstrap/js/bootstrap.js"></script>
 </head>
   <body>
-    <header>
+    <header >
     <nav class="navbar navbar-default navbar-fixed-top">
       <div id="nav-container" class="container-fluid"
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -221,11 +221,25 @@
 
             </div>
 
+            <row class="more-button">
+
+            <div class="col-md-12">
+
+            <a  id="top" href="#"type="button" class="btn btn-primary btn-block center-block">Back to top</a>
+
+            </div>
+          </div>
+
             </div>
 
  </div>
 </div>
 </div>
+
+
+
+
+
 </div>
 
 <footer class=" bottom panel panel-default panel-body align-items-center">
