--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-              <li><a href="">Latest</a></li>
+              <li><a href="./pages/index-2.html">Latest</a></li>
               <li><a href="">New Music</a></li>
               <li><a href="">Videos</a></li>
               <li><a href="">Reviews</a></li>
@@ -145,6 +145,7 @@
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
          </div>
+         
 
 
 
