complete basic page layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>BREAD.</title>
+    <title>Latest</title>
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 
     <link rel="stylesheet" href="./css/style.css">
@@ -37,7 +37,7 @@
           <ul class="nav navbar-nav navbar-right">
               <li><a href="./pages/index-2.html">Latest</a></li>
               <li><a href="">New Music</a></li>
-              <li><a href="">Videos</a></li>
+              <li><a href="./pages/index-3.html">Videos</a></li>
               <li><a href="">Reviews</a></li>
 
           </ul>
@@ -145,7 +145,7 @@
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
          </div>
-         
+
 
 
 
@@ -221,10 +221,10 @@
 
 </div>
 
-<div class="row">
+<div class="row more-button">
   <div class="col-md-12">
 
-    <hr class="style1 breaker">
+  <a type="button"  href="./pages/index-2.html"class="btn btn-primary btn-block center-block">More News</a>
 
   </div>
 
@@ -255,7 +255,7 @@
 <div class="row more-button">
   <div class="col-md-12">
 
-  <button type="button" class="btn btn-primary btn-block center-block">More from bread...</button>
+  <a type="button"  href="./pages/index-3.html"class="btn btn-primary btn-block center-block">More videos</a>
 
   </div>
 
