--- a/pages/index-2.html
+++ b/pages/index-2.html
@@ -35,9 +35,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-              <li><a href="">Latest</a></li>
+              <li><a href="index-2.html#">Latest</a></li>
               <li><a href="">New Music</a></li>
-              <li><a href="">Videos</a></li>
+              <li><a href="./index-3.html">Videos</a></li>
               <li><a href="">Reviews</a></li>
 
           </ul>
