--- a/pages/index-2.html
+++ b/pages/index-2.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <title>BREAD.</title>
+  <title>Latest News</title>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 
   <link rel="stylesheet" href="../css/style.css">
@@ -35,9 +35,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-              <li><a href="index-2.html#">Latest</a></li>
-              <li><a href="">New Music</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="index-2.html#">News</a></li>
               <li><a href="./index-3.html">Videos</a></li>
+              <li><a href="./index-4.html">New Music</a></li>            
               <li><a href="">Reviews</a></li>
 
           </ul>
