Basic Review page layout complete

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li><a href="./pages/index-2.html">News</a></li>
               <li><a href="./pages/index-3.html">Videos</a></li>
               <li><a href="./pages/index-4.html">New Music</a></li>
-              <li><a href="">Reviews</a></li>
+              <li><a href="./pages/index-5.html">Reviews</a></li>
 
           </ul>
         </div><!-- /.navbar-collapse -->
