--- a/pages/index-3.html
+++ b/pages/index-3.html
@@ -40,7 +40,7 @@
             <li><a href="./index-3.html">Videos</a></li>
             <li><a href="./index-4.html">New Music</a></li>
 
-            <li><a href="">Reviews</a></li>
+            <li><a href="./index-5.html">Reviews</a></li>
 
         </ul>
       </div><!-- /.navbar-collapse -->
