--- a/pages/index-4.html
+++ b/pages/index-4.html
@@ -39,7 +39,7 @@
             <li><a href="./index-2.html">News</a></li>
             <li><a href="./index-3.html">Videos</a></li>
             <li><a href="./index-4.html">New Music</a></li>
-            <li><a href="">Reviews</a></li>
+            <li><a href="./index-5.html">Reviews</a></li>
 
         </ul>
       </div><!-- /.navbar-collapse -->
@@ -76,6 +76,15 @@
   </div>
 
 </div>
+<div row class="more-button">
+
+<div class="col-md-12">
+
+<a href="./index-5.html" type="button" class="btn btn-primary btn-block center-block">More Reviews...</a>
+
+</div>
+</div>
+
 </div>
 <footer class=" bottom panel panel-default panel-body align-items-center">
   <div class="row"> <!--Row 4 : Is the Footer, which holds the contact info of me and sparta, split in two parts -->
