--- a/pages/index-2.html
+++ b/pages/index-2.html
@@ -38,8 +38,8 @@
               <li><a href="../index.html">Home</a></li>
               <li><a href="index-2.html#">News</a></li>
               <li><a href="./index-3.html">Videos</a></li>
-              <li><a href="./index-4.html">New Music</a></li>            
-              <li><a href="">Reviews</a></li>
+              <li><a href="./index-4.html">New Music</a></li>
+              <li><a href="./index-5.html">Reviews</a></li>
 
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -222,7 +222,7 @@
 
             </div>
 
-            <row class="more-button">
+            <div row class="more-button">
 
             <div class="col-md-12">
 
