added video links

--- a/pages/index-8.html
+++ b/pages/index-8.html
@@ -49,14 +49,14 @@
 <div class="container">
   <div class="row align-items-center">
     <div class="col-sm-12 col-md-12 ">
-      <h1>Kali Uchis - After The Storm</h1>
+      <h1>Sigrid - Strangers</h1>
       <video controls class="video-page">
-        <source src="../videos/kali.mp4" type="video/mp4">
+        <source src="../videos/sigrid.mp4" type="video/mp4">
       </video>
 
 
 
-      <h2>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</h2>
+      <h2>Sigrid proves shes worthy for success with latest performance on Graham Norton</h2>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
