--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <div class="row">
   <h1>Videos</h1>
   <div class="col-xs-12 col-sm-6 col-md-6 thumbnail">
-    <a href="#"><h2>Kali Uchis - After The Storm</h2></a>
+    <a href="./pages/index-7.html"><h2>Kali Uchis - After The Storm</h2></a>
 
     <img src="./images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
     <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
@@ -218,7 +218,7 @@
 
   <div class="col-xs-12 col-sm-6 col-md-6 thumbnail">
 
-    <a href="#"><h2>Sigrid - Strangers</h2></a>
+    <a href="./pages/index-8.html"><h2>Sigrid - Strangers</h2></a>
 
     <img src="./images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
     <p>Sigrid proves shes worthy for success with latest performance on Graham Norton</p>
